@@ -96,7 +96,11 @@ Sys.glob(paths, dirmark = FALSE)
 \value{
   A character vector of matched file paths.  The order is
   system-specific (but in the order of the elements of \code{paths}): it
-  is normally collated in either the current locale or in byte (ASCII) order.
+  is normally collated in either the current locale or in byte (ASCII)
+  order.  Elements of the result will be have the encoding declared as
+  that of the current locale (see \code{\link{Encoding}} if the
+  corresponding input had a declared encoding and the current locale is
+  either Latin-1 or UTF-8.
 
   Directory errors are normally ignored, so the matches are to
   accessible file paths (but not necessarily accessible files).
