@@ -44,6 +44,11 @@ strsplit(x, split, extended = TRUE, fixed = FALSE, perl = FALSE)
 \value{
   A list of length \code{length(x)} the \code{i}-th element of which
   contains the vector of splits of \code{x[i]}.
+
+  Character strings in the result will be have the encoding declared as
+  that of the current locale (see \code{\link{Encoding}} if the
+  corresponding input had a declared encoding and the current locale is
+  either Latin-1 or UTF-8.
 }
 \details{
   Argument \code{split} will be coerced to character, so
