@@ -29,6 +29,11 @@ strtrim(x, width)
 \value{
   A character vector of the same length and with the same attributes
   as \code{x} (after possible coercion).
+  
+  Elements of the result will be have the encoding declared as that of
+  the current locale (see \code{\link{Encoding}} if the corresponding
+  input had a declared encoding and the current locale is either Latin-1
+  or UTF-8.
 }
 
 \examples{
